--- a/src/main/resources/fxml/AdminMenu/ManageRequests.fxml
+++ b/src/main/resources/fxml/AdminMenu/ManageRequests.fxml
@@ -3,8 +3,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="348.0" prefWidth="805.0" style="-fx-background-color: #dedcde;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.ManageRequests">
-    <MenuBar>
+<AnchorPane prefHeight="348.0" prefWidth="805.0" style="-fx-background-color: #dedcde;" stylesheets="@../../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.ManageRequests">
+    <MenuBar prefHeight="25.0" prefWidth="805.0" styleClass="myMenuBar">
         <Menu text="options">
             <MenuItem onAction="#back" text="back" />
         </Menu>
