--- a/src/main/resources/fxml/CartMenu.fxml
+++ b/src/main/resources/fxml/CartMenu.fxml
@@ -4,29 +4,29 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="498.0" prefWidth="620.0" style="-fx-background-color: #edebed;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.CartMenuController">
+<AnchorPane prefHeight="498.0" prefWidth="620.0" style="-fx-background-color: #edebed;" stylesheets="@../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.CartMenuController">
    <children>
       <ListView fx:id="itemListView" layoutX="96.0" layoutY="79.0" prefHeight="262.0" prefWidth="429.0" />
-      <Button layoutX="201.0" layoutY="341.0" mnemonicParsing="false" onAction="#buy" prefHeight="60.0" prefWidth="220.0" text="Buy" />
-      <Button layoutX="30.0" layoutY="103.0" mnemonicParsing="false" onAction="#increaseItem" prefHeight="36.0" prefWidth="53.0" text="+">
+      <Button layoutX="201.0" layoutY="341.0" mnemonicParsing="false" onAction="#buy" prefHeight="60.0" prefWidth="220.0" styleClass="myBlueButton" text="Buy" />
+      <Button layoutX="30.0" layoutY="103.0" mnemonicParsing="false" onAction="#increaseItem" prefHeight="36.0" prefWidth="53.0" styleClass="myBlueButton" text="+">
          <font>
             <Font size="22.0" />
          </font>
       </Button>
-      <Button layoutX="30.0" layoutY="256.0" mnemonicParsing="false" onAction="#decreaseItem" prefHeight="48.0" prefWidth="53.0" text="-">
+      <Button layoutX="30.0" layoutY="256.0" mnemonicParsing="false" onAction="#decreaseItem" prefHeight="48.0" prefWidth="53.0" styleClass="myBlueButton" text="-">
          <font>
             <Font size="22.0" />
          </font>
       </Button>
-      <Button layoutX="535.0" layoutY="102.0" mnemonicParsing="false" onAction="#showItem" prefHeight="50.0" prefWidth="71.0" text="show Item" />
+      <Button layoutX="535.0" layoutY="102.0" mnemonicParsing="false" onAction="#showItem" prefHeight="50.0" prefWidth="71.0" styleClass="myBlueButton" text="show Item" />
       <Button layoutX="531.0" layoutY="255.0" mnemonicParsing="false" onAction="#clearCartPressed" prefHeight="50.0" prefWidth="79.0" text="clear Cart" />
       <Label fx:id="totalPrice" alignment="CENTER" layoutX="148.0" layoutY="49.0" prefHeight="17.0" prefWidth="325.0" text="Cart Menu">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Button layoutY="30.0" onMouseClicked="#back" text="back" />
-      <MenuBar prefHeight="30.0" prefWidth="620.0">
+      <Button layoutY="30.0" onMouseClicked="#back" styleClass="myBlueButton" text="back" />
+      <MenuBar prefHeight="30.0" prefWidth="620.0" styleClass="myMenuBar">
         <menus>
           <Menu mnemonicParsing="false" text="Options">
             <items>
