--- a/src/main/resources/fxml/ItemMenu.fxml
+++ b/src/main/resources/fxml/ItemMenu.fxml
@@ -1,23 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.media.MediaView?>
-<?import javafx.scene.shape.Polygon?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.media.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #edebed;" stylesheets="@../Styles.CSS" xmlns="http://javafx.com/javafx/8.0.172" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.ItemMenuController">
+<AnchorPane fx:id="anchorPane" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #edebed;" stylesheets="@../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.ItemMenuController">
     <children>
 
         <MenuBar layoutX="0.0" layoutY="0.0" prefHeight="25.0" prefWidth="1292.0" styleClass="myMenuBar">
@@ -50,10 +40,10 @@
         <Label layoutX="28.0" layoutY="501.0" text="Grade:" />
         <Label fx:id="gradeLabel" layoutX="64.0" layoutY="501.0" prefHeight="17.0" prefWidth="93.0" />
         <Separator layoutX="334.0" layoutY="25.0" orientation="VERTICAL" prefHeight="698.0" prefWidth="4.0" />
-        <Button layoutX="451.0" layoutY="640.0" mnemonicParsing="false" onAction="#addToCart" prefHeight="30.0" prefWidth="232.0" text="Add to Cart" />
+        <Button layoutX="451.0" layoutY="640.0" mnemonicParsing="false" onAction="#addToCart" prefHeight="30.0" prefWidth="232.0" styleClass="myBlueButton" text="Add to Cart" />
         <Label layoutX="32.0" layoutY="559.0" prefHeight="17.0" prefWidth="35.0" text="View:" />
         <Label fx:id="viewLabel" layoutX="64.0" layoutY="559.0" prefHeight="17.0" prefWidth="56.0" />
-        <Button layoutX="228.0" layoutY="641.0" mnemonicParsing="false" onAction="#rate" prefHeight="27.0" prefWidth="93.0" text="Rate Item" />
+        <Button layoutX="228.0" layoutY="641.0" mnemonicParsing="false" onAction="#rate" prefHeight="27.0" prefWidth="93.0" styleClass="myBlueButton" text="Rate Item" />
 
         <Polygon fx:id="star1" fill="#AAAAAA" layoutX="25.0" layoutY="635.0" onMouseClicked="#star1Update" points="20,4.006 ,23.97,16.224 ,36.814,16.224, 26.424,23.774 ,30.392,35.992 ,20,28.442, 9.606,35.992 ,13.578,23.774 ,3.184,16.224 ,16.03,16.224" />
         <Polygon fx:id="star2" fill="#AAAAAA" layoutX="60" layoutY="635" onMouseClicked="#star2Update" points="20,4.006 ,23.97,16.224 ,36.814,16.224, 26.424,23.774 ,30.392,35.992 ,20,28.442, 9.606,35.992 ,13.578,23.774 ,3.184,16.224 ,16.03,16.224" />
@@ -72,8 +62,8 @@
                      <children>
                         <ListView fx:id="attributeListView" layoutX="60.0" layoutY="200.0" prefHeight="331.0" prefWidth="387.0" />
                         <Label layoutX="120.0" layoutY="574.0" prefHeight="17.0" prefWidth="104.0" text="Comparable Items:" />
-                        <ComboBox fx:id="itemComoBox" layoutX="269.0" layoutY="570.0" onMouseClicked="#updateItemComoBox" prefWidth="150.0" />
-                        <Button layoutX="270.0" layoutY="614.0" mnemonicParsing="false" onAction="#compare" prefHeight="39.0" prefWidth="147.0" text="Compare" />
+                        <ComboBox fx:id="itemComoBox" layoutX="269.0" layoutY="570.0" onMouseClicked="#updateItemComoBox" prefWidth="150.0" styleClass="myBlueButton" />
+                        <Button layoutX="270.0" layoutY="614.0" mnemonicParsing="false" onAction="#compare" prefHeight="39.0" prefWidth="147.0" styleClass="myBlueButton" text="Compare" />
                         <TextArea fx:id="itemDetails" editable="false" layoutX="61.0" layoutY="42.0" prefHeight="106.0" prefWidth="385.0" />
                      </children></AnchorPane>
                 </content>
@@ -88,7 +78,7 @@
                            </font>
                         </Label>
                           <MediaView fx:id="mediaView" fitHeight="200.0" fitWidth="320.0" layoutX="93.0" layoutY="43.0" />
-                            <Button fx:id="playPause" layoutX="221.0" layoutY="296.0" mnemonicParsing="false" onAction="#playPauseButtonPressed" prefHeight="25.0" prefWidth="65.0" text="Play" />
+                            <Button fx:id="playPause" layoutX="221.0" layoutY="296.0" mnemonicParsing="false" onAction="#playPauseButtonPressed" prefHeight="25.0" prefWidth="65.0" styleClass="myBlueButton" text="Play" />
                      </children></AnchorPane>
             </content>
           </Tab>
@@ -97,7 +87,7 @@
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
                           <ListView fx:id="commentListView" layoutX="14.0" layoutY="37.0" prefHeight="591.0" prefWidth="445.0" />
-                          <Button layoutX="276.0" layoutY="638.0" mnemonicParsing="false" onAction="#comment" prefHeight="48.0" prefWidth="183.0" text="add Comment" />
+                          <Button layoutX="276.0" layoutY="638.0" mnemonicParsing="false" onAction="#comment" prefHeight="48.0" prefWidth="183.0" styleClass="myBlueButton" text="add Comment" />
                         <Label layoutX="14.0" layoutY="14.0" prefHeight="17.0" prefWidth="146.0" text="all Comments" />
                      </children></AnchorPane>
             </content>
