--- a/src/main/resources/fxml/SellerMenu/SellerSalesHistory.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerSalesHistory.fxml
@@ -7,7 +7,7 @@
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" styleClass="jedBackground" stylesheets="@../../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.SellerMenuController.SellerSalesHistory">
    <children>
    
-       <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0">
+       <MenuBar prefHeight="25.0" prefWidth="1280.0" styleClass="myMenuBar">
            <menus>
                <Menu mnemonicParsing="false" text="option">
                   <items>
