--- a/src/main/resources/fxml/ViewRequestUser.fxml
+++ b/src/main/resources/fxml/ViewRequestUser.fxml
@@ -5,7 +5,7 @@
 
 <AnchorPane prefHeight="465.0" prefWidth="639.0" style="-fx-background-color: #94a8b3;" stylesheets="@../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.ViewRequestUser">
 <ListView fx:id="request" layoutX="14.0" layoutY="39.0" prefHeight="419.0" prefWidth="609.0" />
-    <MenuBar>
+    <MenuBar prefHeight="27.0" prefWidth="639.0" styleClass="myMenuBar">
         <Menu text="options">
             <MenuItem onAction="#back" text="back" />
         </Menu>
