--- a/src/main/resources/fxml/BuyerRegisterMenu.fxml
+++ b/src/main/resources/fxml/BuyerRegisterMenu.fxml
@@ -21,7 +21,7 @@
       <TextField fx:id="emailTextField" layoutX="716.0" layoutY="347.0" prefHeight="25.0" prefWidth="128.0" promptText="Email" styleClass="myTextField" />
       <TextField fx:id="numberTextField" layoutX="891.0" layoutY="346.0" prefHeight="25.0" prefWidth="128.0" promptText="Phone" styleClass="myTextField" />
        <TextField fx:id="moneyTextField" layoutX="710.0" layoutY="565.0" prefHeight="25.0" prefWidth="128.0" promptText="Balance" styleClass="myTextField" />
-       <Button layoutX="879.0" layoutY="560.0" mnemonicParsing="false" onAction="#register" prefHeight="25.0" prefWidth="159.0" text="Register" />
+       <Button layoutX="879.0" layoutY="560.0" mnemonicParsing="false" onAction="#register" prefHeight="25.0" prefWidth="159.0" styleClass="myBlueButton" text="Register" />
        <CheckBox fx:id="passwordCheckBox" layoutX="908.0" layoutY="169.0" mnemonicParsing="false" text="Show password?" />
       <TextField fx:id="imageDirectory" layoutX="716.0" layoutY="455.0" prefHeight="25.0" prefWidth="128.0" promptText="Image" styleClass="myTextField" />
       <Label fx:id="usernameLabel" layoutX="676.0" layoutY="152.0" prefHeight="17.0" prefWidth="209.0" />
@@ -32,7 +32,7 @@
       <Label fx:id="emailLabel" layoutX="689.0" layoutY="372.0" prefHeight="17.0" prefWidth="150.0" />
       <Label fx:id="phoneNumberLabel" layoutX="876.0" layoutY="372.0" prefHeight="17.0" prefWidth="149.0" />
 
-      <Button layoutY="27.0" mnemonicParsing="false" onAction="#back" prefHeight="25.0" prefWidth="102.0" text="Back" />
+      <Button layoutY="27.0" mnemonicParsing="false" onAction="#back" prefHeight="25.0" prefWidth="102.0" styleClass="myBlueButton" text="Back" />
       <MenuBar layoutY="-1.0" prefHeight="27.0" prefWidth="1281.0" styleClass="myMenuBar">
         <menus>
           <Menu mnemonicParsing="false" text="Loign or Register">
@@ -50,7 +50,7 @@
           </Menu>
         </menus>
       </MenuBar>
-      <Button layoutX="851.0" layoutY="455.0" mnemonicParsing="false" onAction="#fileChooserOpen" text="..." />
+      <Button layoutX="851.0" layoutY="455.0" mnemonicParsing="false" onAction="#fileChooserOpen" styleClass="myBlueButton" text="..." />
       <Hyperlink layoutX="377.0" layoutY="559.0" onAction="#goToSellerRegisterMenu" prefHeight="23.0" prefWidth="150.0" text="Sign up as a Vendor">
          <font>
             <Font size="14.0" />
