--- a/src/main/resources/Styles.CSS
+++ b/src/main/resources/Styles.CSS
@@ -44,6 +44,25 @@
             -fx-background-insets: 1 0 0 0,2 0 3 0, 2 0 3 0, 2 0 3 0;
         }
 
+
+
+    .greyButton {
+            -fx-padding: 2 3 3 3;
+            -fx-background-radius: 2;
+            -fx-background-insets: 0,0 0 2 0, 0 0 2 0, 0 0 3 0;
+            -fx-effect: dropshadow( gaussian , rgba(0,0,0,0.75) , 4,0,0,1 );
+            -fx-background-color:#bababa;
+        }
+        .myButton:hover{
+            -fx-background-color:
+            #bababa,
+            radial-gradient(center 50% 50%, radius 100%, #cddde6, #bababa);
+        }
+        .myButton:pressed{
+            -fx-padding: 2 3 3 3;
+            -fx-background-insets: 1 0 0 0,2 0 3 0, 2 0 3 0, 2 0 3 0;
+        }
+
     .registerBuyerMenu {
         -fx-background-image: url("design/newRegister.png");
     }
