--- a/src/main/resources/fxml/AdminMenu/EditDiscountCode.fxml
+++ b/src/main/resources/fxml/AdminMenu/EditDiscountCode.fxml
@@ -31,6 +31,6 @@
     <Button layoutX="330.0" layoutY="108.0" onMouseClicked="#changeUsage" styleClass="myBlueButton" text="change" />
 
     <Button layoutX="330.0" layoutY="153.0" onMouseClicked="#changeEndDate" styleClass="myBlueButton" text="change" />
-    <Button layoutX="334.0" layoutY="200.0" onMouseClicked="#delete" text="delete" />
+    <Button layoutX="334.0" layoutY="200.0" onMouseClicked="#delete" styleClass="redButton" text="delete" />
     <ListView fx:id="info" layoutX="111.0" layoutY="200.0" prefHeight="157.0" prefWidth="160.0" />
 </AnchorPane>
