--- a/src/main/resources/fxml/AdminMenu/ManageUserIn.fxml
+++ b/src/main/resources/fxml/AdminMenu/ManageUserIn.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane prefHeight="88.0" prefWidth="340.0" style="-fx-background-color: #dedcde;" stylesheets="@../../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.ManageUserIn">
-            <Button layoutX="179.0" layoutY="37.0" onMouseClicked="#deleteUser" prefHeight="27.0" prefWidth="113.0" text="delete user" />
+            <Button layoutX="179.0" layoutY="37.0" onMouseClicked="#deleteUser" prefHeight="27.0" prefWidth="113.0" styleClass="redButton" text="delete user" />
              <Button onMouseClicked="#back" styleClass="myBlueButton" text="exit" />
             <Button layoutX="100.0" layoutY="37.0" onMouseClicked="#viewUser" styleClass="myBlueButton" text="view user" />
 </AnchorPane>
