--- a/src/main/resources/fxml/BuyerMenu/BuyerEditPersonalInfo.fxml
+++ b/src/main/resources/fxml/BuyerMenu/BuyerEditPersonalInfo.fxml
@@ -25,6 +25,6 @@
 <Button layoutX="231.0" layoutY="84.0" onMouseClicked="#changeSurname" prefHeight="27.0" prefWidth="72.0" styleClass="myBlueButton" text="change" />
 <Button layoutX="231.0" layoutY="124.0" onMouseClicked="#changeEmail" prefHeight="27.0" prefWidth="72.0" styleClass="myBlueButton" text="change" />
 <Button layoutX="231.0" layoutY="158.0" onMouseClicked="#changeNumber" prefHeight="27.0" prefWidth="72.0" styleClass="myBlueButton" text="change" />
-<Button layoutX="397.0" layoutY="184.0" mnemonicParsing="false" onAction="#removeImage" text="remove image" />
+<Button layoutX="397.0" layoutY="184.0" mnemonicParsing="false" onAction="#removeImage" styleClass="redButton" text="remove image" />
 <Button layoutX="506.0" layoutY="184.0" mnemonicParsing="false" onAction="#changeImage" styleClass="myBlueButton" text="change image" />
         </AnchorPane>
