--- a/src/main/resources/fxml/SellerMenu/SellerAddOff.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerAddOff.fxml
@@ -28,6 +28,6 @@
    <Label layoutX="860.0" layoutY="55.0" prefHeight="17.0" prefWidth="140.0" text="Items that will be added:" />
    <Button layoutX="337.0" layoutY="610.0" mnemonicParsing="false" onAction="#createSale" prefHeight="25.0" prefWidth="100.0" styleClass="myBlueButton" text="Create Sale" />
    <Label fx:id="errorLabel" layoutX="91.0" layoutY="318.0" prefHeight="17.0" prefWidth="250.0" />
-   <Button layoutX="161.0" layoutY="360.0" mnemonicParsing="false" onAction="#reset" prefHeight="25.0" prefWidth="100.0" text="Clear All" />
+   <Button layoutX="161.0" layoutY="360.0" mnemonicParsing="false" onAction="#reset" prefHeight="25.0" prefWidth="100.0" styleClass="redButton" text="Clear All" />
 
 </AnchorPane>
