--- a/src/main/resources/fxml/SellerMenu/SellerEditItemMenu.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerEditItemMenu.fxml
@@ -15,7 +15,7 @@
         </menus>
     </MenuBar>
    <ListView fx:id="listView" layoutX="308.0" layoutY="85.0" onMouseClicked="#keySelect" prefHeight="519.0" prefWidth="390.0" />
-   <Button fx:id="removeItem" layoutX="308.0" layoutY="629.0" mnemonicParsing="false" onAction="#removeItem" prefHeight="25.0" prefWidth="131.0" text="Remove Item" />
+   <Button fx:id="removeItem" layoutX="308.0" layoutY="629.0" mnemonicParsing="false" onAction="#removeItem" prefHeight="25.0" prefWidth="131.0" styleClass="redButton" text="Remove Item" />
    <Label fx:id="label" layoutX="308.0" layoutY="48.0" prefHeight="17.0" prefWidth="252.0" text="Label" />
    <ListView fx:id="buyersListView" layoutX="796.0" layoutY="187.0" prefHeight="417.0" prefWidth="200.0" />
    <Label layoutX="796.0" layoutY="150.0" prefHeight="25.0" prefWidth="44.0" text="Buyers" />
