--- a/src/main/resources/fxml/CommentMenu.fxml
+++ b/src/main/resources/fxml/CommentMenu.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #94a8b3;" stylesheets="@../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.commentMenuController">
+<AnchorPane fx:id="anchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #94a8b3;" stylesheets="@../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.commentMenuController">
     <children>
         <TextField fx:id="usernameTexField" layoutX="91.0" layoutY="80.0" style="-fx-border-width: 2 2 2 2; -fx-border-color: #bababa;" />
         <Label layoutX="31.0" layoutY="84.0" prefHeight="17.0" prefWidth="60.0" text="username" />
